if include_ogg_SUBDIR
KFILE_OGG_SUBDIR=ogg
endif

if include_flac_SUBDIR
KFILE_FLAC_SUBDIR=flac
endif

if include_mp3_SUBDIR
KFILE_MP3_SUBDIR=mp3
endif

if include_mpc_SUBDIR
KFILE_MPC_SUBDIR=mpc
endif

if include_theora_SUBDIR
KFILE_THEORA_SUBDIR=theora
endif

SUBDIRS=m3u $(KFILE_MP3_SUBDIR) $(KFILE_MPC_SUBDIR) au avi mpeg wav sid $(KFILE_OGG_SUBDIR) \
        $(KFILE_FLAC_SUBDIR) $(KFILE_THEORA_SUBDIR)
